--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10413,9 +10413,12 @@ a.text-dark:focus {
 }
 
 .col-sm-4 .card-block {
-  padding: 1.25rem;
+  padding: 1.25rem 1.25rem 0 1.25rem;
   height: 300px;
-  margin-bottom: 20px;
+}
+
+.col-sm-4 .card-block p {
+  margin-bottom: 0;
 }
 
 .card-block {
@@ -10434,5 +10437,9 @@ a.text-dark:focus {
 footer {
   position: absolute;
   bottom: 0;
+}
+
+.jumbotron {
+  min-width: 80vw;
 }
 
